Ajusting build destination

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Ponte D. Luis</title>
-        <script type="module" src="./src/index.js"></script>
-		<script type="module" src="./index.css"></script>
+        
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script type="module" crossorigin src="/ThreeJs-PonteDLuis/index-950bbb98.js"></script>
+		<link rel="stylesheet" href="/ThreeJs-PonteDLuis/index-38932a8a.css">
 	</head>
 	<body>
 		<section id="title" class="title-wrapper position-on-top normal-font-size half-s-transition max-size-by-renderer">
@@ -26,22 +28,22 @@
 		<article id="info-1" class="hidden font-zero normal-font-size half-s-transition floating-content">
 			<p>Inaugurada em 1886 e com o tabuleiro superior entregue em 1888, à época, a ponte era provavelmente a única do mundo com dois tabuleiros rodoviários e também possuía o maior arco dentre todas as demais.</p>
 			<div class="superposed-images-art">
-				<img src="./public/img/projeto-ponte.jpg" width="300" height="130" />
-				<img src="./public/img/construcao-ponte.jpg" width="250" height="150" />
+				<img src="/ThreeJs-PonteDLuis/projeto-ponte-ed8784ac.jpg" width="300" height="130" />
+				<img src="/ThreeJs-PonteDLuis/construcao-ponte-f3bc0e0b.jpg" width="250" height="150" />
 			</div>
 		</article>
 		<article id="info-2" class="hidden font-zero normal-font-size half-s-transition floating-content info-2-position">
 			<p>Até 2005 este tabuleiro (superior) permitia circulação de viaturas e peões. Com a implantação da linha de metro amarela, o tráfego ficou restrito apenas aos peões e às locomotivas.</p>
 			<div class="superposed-images-art">
-				<img src="./public/img/PonteDLuisCarrosAntigos.png" width="350" height="200" />
-				<img src="./public/img/TabuleiroSuperiorAntes2003.jpg" width="200" height="200" />
+				<img src="/ThreeJs-PonteDLuis/PonteDLuisCarrosAntigos-41b0733e.png" width="350" height="200" />
+				<img src="/ThreeJs-PonteDLuis/TabuleiroSuperiorAntes2003-424737a5.jpg" width="200" height="200" />
 			</div>
 		</article>
 		<article id="info-3" class="hidden font-zero normal-font-size half-s-transition floating-content info-3-position">
 			<p>Atualmente, neste espaço circulam a Linha D (amarela) do metro de Porto, em ambas as direções, assim como peões. Esta é uma área muito frequentada, para contemplação do sol poente e para fotografar o metro com grande proximidade.</p>
 			<div class="superposed-images-art">
-				<img src="./public/img/LinhaAmarela.jpg" width="450" height="200" />
-				<img src="./public/img/PorDoSol.jpeg" width="300" height="150" />
+				<img src="/ThreeJs-PonteDLuis/LinhaAmarela-430ffde8.jpg" width="450" height="200" />
+				<img src="/ThreeJs-PonteDLuis/PorDoSol-cdcc38cd.jpeg" width="300" height="150" />
 			</div>
 		</article>
 	</body>
